<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:weightSum="11"
    android:orientation="vertical">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical"
        android:weightSum="3">
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/firstInfoImage"
                android:contentDescription="@string/app_name"/>
        </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="vertical">
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/shop_info_text_view_left_padding"
                    android:paddingEnd="0dp"
                    android:text="@string/one_hundred_metres"/>
            </android.support.constraint.ConstraintLayout>
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/shop_info_text_view_left_padding"
                    android:paddingEnd="0dp"
                    android:text="@string/pull_and_bear_text"/>
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/shop_info_text_view_left_padding"
                    android:paddingEnd="0dp"
                    android:text="@string/clothes_text"/>
            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bottom_top_margin"
                android:layout_marginBottom="@dimen/bottom_top_margin"
                android:layout_marginStart="@dimen/shop_info_text_view_left_padding"
                android:id="@+id/text_bottom"
                android:text="@string/save_up_text"
                android:layout_alignParentBottom="true"/>
            <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/shop_info_text_view_left_padding"
            android:layout_marginBottom="@dimen/shop_info_text_view_left_padding"
            android:layout_marginStart="@dimen/shop_info_text_view_left_padding"
            android:text="@string/deals_text"
            android:id="@+id/text_top"/>
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@id/text_top"
                android:layout_alignTop="@id/text_bottom"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/image_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintBottom_toTopOf="@+id/text_bottom"
                    app:layout_constraintTop_toBottomOf="@+id/text_top"/>
            </android.support.v7.widget.LinearLayoutCompat>
        </RelativeLayout>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.LinearLayoutCompat>